--- a/shipper-plugins/build.gradle
+++ b/shipper-plugins/build.gradle
@@ -6,6 +6,10 @@ repositories {
     jcenter()
 }
 
+sourceSets.test.resources {
+    srcDir 'src/test/java'
+}
+
 dependencies {
     api project(path: ":shipper-api")
 
