--- a/shipper-plugins/src/test/java/it/foosoft/shipper/plugins/files/dissect_logstash.conf
+++ b/shipper-plugins/src/test/java/it/foosoft/shipper/plugins/files/dissect_logstash.conf
@@ -7,6 +7,7 @@ input {
 
 filter {
     dissect_logstash {
+        id => "dissect"
         mapping => {
             "message" => "%{date}	%{time}	%{ip}	%{method}	%{uri}	%{response}	%{bytesSent}	%{responseTime}	%{referer}	%{userAgentLog}	%{?cookie}	%{?disId}	%{?headerSize}	%{cache}	%{?other}"
     }
