- Using junit 5 for testing - Initial support for File plugin - Shutdown procedure with flush

--- a/shipper-plugins/src/test/java/it/foosoft/shipper/plugins/files/dissect.conf
+++ b/shipper-plugins/src/test/java/it/foosoft/shipper/plugins/files/dissect.conf
@@ -1,5 +1,5 @@
 input {
-    file {
+    testfile {
        path => "classpath:it/foosoft/shipper/plugins/files/vod01.msf.cdn.mediaset.net_20210208222701_219180n2126107.log"
        loop => true
     }
