--- a/shipper-plugins/build.gradle
+++ b/shipper-plugins/build.gradle
@@ -22,7 +22,7 @@ dependencies {
 	// https://mvnrepository.com/artifact/org.elasticsearch.client/elasticsearch-rest-client
 	implementation group: 'org.elasticsearch.client', name: 'elasticsearch-rest-client', version: '7.11.0'
 
-    // Use JUnit test framework.
-    testImplementation 'junit:junit:4.13'
     testImplementation project(path: ":shipper-core")
+	testImplementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.14.0'
+
 }
