- corrected error in importing gzipped files: the stream was closed immediately - stop procedure for file input must not rely on thread interruption. There will be no way of doing an orderly shutdown otherwise.

--- a/shipper/src/test/java/it/foosoft/shipper/files/clinkfull.conf
+++ b/shipper/src/test/java/it/foosoft/shipper/files/clinkfull.conf
@@ -1,7 +1,7 @@
 input {
-    testfile {
-       path => "classpath:it/foosoft/shipper/files/clink.log"
-       loop => true
+    file {
+#       path => "classpath:it/foosoft/shipper/files/clink.log"
+       path => "C:/Users/luca/dati/logstash/**/*.gz"
     }
 }
 
