--- a/shipper/src/test/java/it/foosoft/shipper/files/clinkfull.conf
+++ b/shipper/src/test/java/it/foosoft/shipper/files/clinkfull.conf
@@ -2,6 +2,7 @@ input {
     file {
 #       path => "classpath:it/foosoft/shipper/files/clink.log"
        path => "C:/Users/luca/dati/logstash/**/*.gz"
+       id => "file"
     }
 }
 
