--- a/shipper/build.gradle
+++ b/shipper/build.gradle
@@ -71,6 +71,7 @@ dependencies {
     implementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.14.0'
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.12.1'
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.12.1'
+    implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.12.1'
     implementation group: 'info.picocli', name: 'picocli', version: '4.6.1'
     implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
 }
