- Stricter configuration validation (javax.validation, jsr something) - Added support for plugin fields serializable via fromValue - Added support for relative paths in pipelines.yaml (this is so useful for testing!!!!)

--- a/shipper-core/build.gradle
+++ b/shipper-core/build.gradle
@@ -37,4 +37,6 @@ dependencies {
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.12.1'
 	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.12.1'
     implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
+	// https://mvnrepository.com/artifact/org.apache.bval/bval-jsr
+	implementation group: 'org.apache.bval', name: 'bval-jsr', version: '2.0.5'
 }
