--- a/shipper/src/test/java/it/foosoft/shipper/files/clinkfull.conf
+++ b/shipper/src/test/java/it/foosoft/shipper/files/clinkfull.conf
@@ -3,6 +3,7 @@ input {
 #       path => "classpath:it/foosoft/shipper/files/clink.log"
        path => "C:/Users/luca/dati/logstash/**/*.gz"
        id => "file"
+       mode => "read"
     }
 }
 
