- Added default log4j2 config. try#2

--- a/shipper/build.gradle
+++ b/shipper/build.gradle
@@ -30,7 +30,9 @@ task fatJar(type: Jar, dependsOn: 'jar') {
     from {
       	"build/classes/java/main" 
     }
-
+    from {
+        "build/resources/main/"
+    }
 }
 
 task rpm(type: Rpm, dependsOn: 'fatJar') {
