--- a/shipper/build.gradle
+++ b/shipper/build.gradle
@@ -61,6 +61,7 @@ task rpm(type: Rpm, dependsOn: 'fatJar') {
     from('rpm/usr_bin') {
         addParentDirs false
         into '/usr/bin'
+        fileMode 0755
     }
     from('rpm/lib') {
         addParentDirs false
