--- a/shipper/build.gradle
+++ b/shipper/build.gradle
@@ -9,7 +9,7 @@ repositories {
 }
 
 // won't set version, because systemd script expects vanilla shipper-fat.jar
-def RPM_VERSION=0.2.1
+def RPM_VERSION="0.2.1"
 
 // I prefer unit tests with files on side
 sourceSets.test.resources.srcDir (['src/test/java','src/test/resources'])
