- Trying to make a serious pipeline testable in a devel environment

--- a/shipper/src/test/java/it/foosoft/shipper/files/clinkfull.conf
+++ b/shipper/src/test/java/it/foosoft/shipper/files/clinkfull.conf
@@ -80,7 +80,7 @@ filter {
           }
            grok {
              # Questo blocco di analisi estrae informazione dalle url Mp4
-             patterns_dir => "/etc/logstash/patterns"
+             patterns_dir => "patterns"
              tag_on_failure => "farmunica_media_match_fail"
              match => {
                "assetpath" => "(?<mp4Filename>[\w+]*\.mp4)"
@@ -92,7 +92,7 @@ filter {
              add_field => {"uriType" => "hls"}
           }
             grok {
-               patterns_dir => "/etc/logstash/patterns"
+               patterns_dir => "patterns"
                tag_on_failure => "farmunica_media_match_fail"
                break_on_match => true
                # Do the l0/xxxxx match all in one step, more efficient. first check the chunks, as they are way more frequent
@@ -105,7 +105,7 @@ filter {
             }
             grok {
                # This block is for matching DASH urls
-               patterns_dir => "/etc/logstash/patterns"
+               patterns_dir => "patterns"
                tag_on_failure => "farmunica_media_match_fail"
                break_on_match => true
                match => {"assetpath" => "^(?<cmsTag>\w*)/(?:(?<dashManifest>\w*\.mpd)|dash_%{INT:adaptationSet:int}\.%{INT:representation:int}/((?<dashInit>\w*\.mp4)|%{INT:chunk:int}\.m4s))" }
@@ -120,7 +120,7 @@ filter {
                     field => "assetpath"
                 }
                 grok {
-                    patterns_dir => "/etc/logstash/patterns"
+                    patterns_dir => "patterns"
                     tag_on_failure => "farmunica_media_match_fail"
                     match => {
                         "assetpath" => "^\w*/(?:%{CMSTAG:cmsTag}.ism)(?:(?:(?:/[Qq]uality[Ll]evels\(%{QL:qualityLevel:int}\))?(?:/[Ff]ragments\(%{AV:av}(?:_%{LANG:audioLanguage})?=%{BITRATE:byteSegmentPosition:int}\))+)|/[Mm]anifest)"
@@ -139,7 +139,7 @@ filter {
           add_field => {"uriType" => "4k-uhd"}
         }
         grok {
-          patterns_dir => "/etc/logstash/patterns"
+          patterns_dir => "patterns"
           tag_on_failure => "uhd_grok_fail"
           match => {
              "relativeUrl" => "/uhd/..../\w*/?\w*/\w*/(\w*\.\d/((?:seg-(?<segment>\w*\.m4f))|(?:(?<uhdInit>\w*\.mp4)))|(?:(?<uhdManifest>\w*\.(mpd|itaeng.mpd))))"
@@ -154,18 +154,18 @@ filter {
 
 filter {
         # Geolocalizzo l'IP del Client secondo il DB free GeoLite2-City
-        geoip {
-            source => "ip"
-            target => "src_ip"
-            database => "/etc/logstash/geoloc_db/GeoIP2-City.mmdb"
-        }
+#        geoip {
+#            source => "ip"
+#            target => "src_ip"
+#            database => "/etc/logstash/geoloc_db/GeoIP2-City.mmdb"
+#        }
 
         # Geolocalizzo l'IP del Client secondo il DB free GeoLite2-ASN
-        geoip {
-            source => "ip"
-            target => "src_ip"
-            database => "/etc/logstash/geoloc_db/GeoIP2-ISP.mmdb"
-        }
+#        geoip {
+#            source => "ip"
+#            target => "src_ip"
+#            database => "/etc/logstash/geoloc_db/GeoIP2-ISP.mmdb"
+#        }
 
         mutate {
           add_field => { "clientIpType" => "external" }
@@ -182,7 +182,7 @@ filter {
         # Si fa il parsing dello User Agent
         useragent {
             source => "userAgentLog"
-            regexes => "/etc/logstash/patterns/regexes.yaml"
+            regexes => "patterns/regexes.yaml"
             id => "userAgent"
             target => "userAgent"
         }
