Faster and less memory batch decoupling buffer

--- a/shipper/src/test/java/it/foosoft/shipper/files/clink.conf
+++ b/shipper/src/test/java/it/foosoft/shipper/files/clink.conf
@@ -6,12 +6,12 @@ input {
 }
 
 filter {
-    if [message] =~ /^\/#/ {
+    if [message] =~ /^#/ {
         drop{}
     }
 
     mutate {
-        remove_field => [ "host", "@timestamp", "command", "path" ]
+        remove_field => [ "host", "command", "path" ]
         add_field => { "cdnName" => "cdncl" }
     }
 
@@ -100,7 +100,7 @@ filter {
         # Si fa il parsing dello User Agent
         useragent {
             source => "userAgentLog"
-            regexes => "/etc/logstash/patterns/regexes.yaml"
+            regexes => "C:/etc/logstash/patterns/regexes.yaml"
             id => "userAgent"
             target => "userAgent"
         }
@@ -112,7 +112,7 @@ filter {
            ([userAgent][name] !~ "Other") or
            ([userAgent][device] !~ "Other") {
             mutate {
-                remove_field => ["userAgentLog"]
+               remove_field => ["userAgentLog"]
                # add_tag => ["useragent"]
             }
         }
