--- a/shipper-core/build.gradle
+++ b/shipper-core/build.gradle
@@ -43,3 +43,7 @@ dependencies {
     testImplementation group: 'org.easymock', name: 'easymock', version: '4.2'
 	testImplementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.17.2'
 }
+
+test {
+    useJUnitPlatform()
+}
