--- a/shipper-plugins/build.gradle
+++ b/shipper-plugins/build.gradle
@@ -21,6 +21,7 @@ dependencies {
 	implementation group: 'io.krakens', name: 'java-grok', version: '0.1.9'
 	// https://mvnrepository.com/artifact/org.elasticsearch.client/elasticsearch-rest-client
 	implementation group: 'org.elasticsearch.client', name: 'elasticsearch-rest-client', version: '7.11.0'
+    implementation("com.alibaba.fastjson2:fastjson2-kotlin:2.0.47")
 
     implementation group: 'com.github.ben-manes.caffeine', name: 'caffeine', version: '2.8.8'
 
